--- a/styles.css
+++ b/styles.css
@@ -96,12 +96,77 @@ h2 {
     padding-left: 0.75rem;
 }
 
+h3{
+	color: white;
+	padding-top: 2px;
+	text-align: center;
+	font-size: 2px;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+input {
+    background-color: white;
+    width: 70%;
+    margin-left: 12%;
+    font-size: 20px;
+    padding: 16px 16px;
+    border-radius: 10px;
+    border-color: green;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+span{
+    background-color: white;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+input.touched:invalid {
+    border: 2px solid red;
+    background-color: #ffe5e5;
+  }
+  
+  input.touched:valid {
+    border: 2px solid green;
+    background-color: #e6ffe6;
+  }
+  
+  .error-message {
+    color: red;
+    font-size: 0.85rem;
+    margin-bottom: 0.25rem;
+    display: none;
+  }
+  
+  
+  
+
+button{
+    background-color: white;
+    width: 4%;
+    font-weight: bold;
+    margin-left: 12%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border-radius: 5px;
+    font-size: 10px;
+    padding: 3px 2px;
+}
+
 ul {
     list-style-type: disc;
     padding-left: 2rem;
     line-height: 1.8;
     margin-bottom: 1.5rem; /* Add spacing below lists */
 }
+
+label {
+    font-size: 20px;
+    display: inline-flex;
+    width: 140px;
+    text-align: right;
+  }​
 
 footer {
     color: blue;
