--- a/styles.css
+++ b/styles.css
@@ -139,11 +139,28 @@ input.touched:invalid {
     margin-bottom: 0.25rem;
     display: none;
   }
-  
-  
-  
+ 
+#interestChecker{
+    font-size: 20px;
+    display: inline-flex;
+    width: 465px;
+    text-align: left;
+}
 
-button{
+#selectionBox{
+    background-color: white;
+    width: 1235%;
+    margin-left: 12%;
+    text-align: center;
+    font-size: 20px;
+    padding: 16px 16px;
+    border-radius: 10px;
+    border-color: green;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+  
+#back-to-top{
     background-color: white;
     width: 4%;
     font-weight: bold;
@@ -152,6 +169,17 @@ button{
     border-radius: 5px;
     font-size: 10px;
     padding: 3px 2px;
+}
+
+#send-button-form{
+    background-color: white;
+    width: 23%;
+    font-weight: bold;
+    margin-left: 41%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border-radius: 25px;
+    font-size: 25px;
+    padding: 25px 25px;
 }
 
 ul {
